src/test/deca/syntax/invalid/without_class/invalid_op.deca
// Description:
//    invalid operator ++
//
// Result:
//    Syntax Error
//    line 10

{
    int i = 0;
    i++;
}